crates/quarto-highlight/tests/integration/snapshots/integration__golden__bash.snap
---
source: crates/quarto-highlight/tests/integration/golden.rs
description: "greet() {\n  echo \"hello, $1\"\n}\n"
---
[
  [
    0,
    5,
    "function"
  ],
  [
    12,
    16,
    "function"
  ],
  [
    17,
    25,
    "string"
  ],
  [
    25,
    26,
    "operator"
  ],
  [
    26,
    27,
    "property"
  ],
  [
    27,
    28,
    "string"
  ]
]
