crates/quarto-highlight/tests/integration/snapshots/integration__golden__user_grammar_toml.snap
---
source: crates/quarto-highlight/tests/integration/golden.rs
description: "name = \"value\"\ncount = 42\n"
---
[
  [
    0,
    4,
    "type"
  ],
  [
    4,
    5,
    "property"
  ],
  [
    5,
    6,
    "operator"
  ],
  [
    6,
    7,
    "property"
  ],
  [
    7,
    14,
    "string"
  ],
  [
    15,
    20,
    "type"
  ],
  [
    20,
    21,
    "property"
  ],
  [
    21,
    22,
    "operator"
  ],
  [
    22,
    23,
    "property"
  ],
  [
    23,
    25,
    "number"
  ]
]
